--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,12 +4,14 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
+
     database-platform: org.hibernate.dialect.MySQL8Dialect
     show-sql: true
   datasource:
     url: jdbc:mysql://localhost:3306/asesoria_db?useSSL=false&serverTimezone=UTC
     username: root
     password: root
-
+  jackson:
+    serialization.fail-on-empty-beans: false
 
 
