--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,12 +3,17 @@ spring:
     name: gym-api
   jpa:
     hibernate:
-      ddl-auto: update
-    database-platform: org.hibernate.dialect.MySQL8Dialect
+      ddl-auto: create
+    database: postgresql
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
     show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
   datasource:
-    url: jdbc:mysql://localhost:3306/asesoria_db?useSSL=false&serverTimezone=UTC
+    url: jdbc:postgresql://localhost:5432/asesoria_db?useSSL=false&serverTimezone=UTC
     username: root
     password: root
+    driver-class-name: org.postgresql.Driver
   jackson:
     serialization.fail-on-empty-beans: false
